update the learn link

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -16,6 +16,6 @@ layout: home
   <PlaygroundButton>Read the docs</PlaygroundButton>
 
   </section>
-<p><a href="https://cal.com/january-sh/30min">Talk with us</a> to discuss your thoughts, feedback, comments, or any other topics.</p>
+<p><a href="https://discord.gg/CQCCpr3Xs7">Talk with us</a> to discuss your thoughts, feedback, comments, or any other topics.</p>
 
 </section>
